# jukebox

./: .gitmodules  README.md
app/: .gitignore
app/JukeboxCreator/: CMakeLists.txt  assemblyunit.cpp  assemblyunit.h  behaviorcompiler.cpp  behaviorcompiler.h  behaviorlistview.cpp  behaviorlistview.h  behaviormanagerdialog.cpp  behaviormanagerdialog.h  behaviormanagerdialog.ui  behaviorslistmodel.cpp  behaviorslistmodel.h  editorsession.cpp  editorsession.h  gtbehavior.cpp  gtbehavior.h  gtentity.cpp  gtentity.h  gtentityslot.cpp  gtentityslot.h  gtproject.cpp  gtproject.h  gtscene.cpp  gtscene.h  gtsprite.cpp  gtsprite.h  jsonbase.cpp  jsonbase.h  jsonmacros.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  romserializer.cpp  romserializer.h  sceneeditorview.cpp  sceneeditorview.h  splashdialog.cpp  splashdialog.h  splashdialog.ui  (+2 more)
app/JukeboxCreator/resource/: behaviors.cfg
app/build-JukeboxCreator-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
app/build-JukeboxCreator-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
app/build-JukeboxCreator-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
app/build-JukeboxCreator-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/JukeboxCreator_autogen/: deps
app/build-JukeboxCreator-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/JukeboxCreator_autogen/EWIEGA46WW/: moc_mainwindow.cpp  (+1 more)
engine/: gametank-2M.cfg  makefile
engine/binclude/: core_symbols.h  engine.inc  engine_core.h
engine/scripts/: gen_asm_includes.js  gen_engine_offsets.h
engine/src/game/: entity.inc  entity.s  scene.inc  scene.s  time.s
engine/src/graphics/: loader.s  rect.inc  renderqueue.s  vidctrl.s  vsync.s
engine/src/include/: colors.inc  via.inc
engine/src/system/: args.s  banking.s  boot.s  input.s  main.s  regs.inc  vectors.s
engine/src/testdata/: testdata.s
engine/src/util/: math.s
kit/behaviors/: player_eight_way_move.asm  simple_move.asm
kit/behaviors/actions/: cycle_frames.asm  player_eight_way_move.asm  set_state_bits.asm  simple_move.asm
kit/behaviors/conditionals/: but_always.asm  button_test.asm  distance_test_slot.asm  frame_equals.asm  global_tick_mask.asm  hp_equals.asm  state_bitmask_test.asm  state_equals.asm
test/TestProject/: project.json
test/TestProject/behaviors/: distance_test.asm  otherwise.asm  screen_boundary_test.asm  set_frame.asm  set_slot.asm  simple_move.asm  spawn_entity_pooled.asm  spawn_entity_simple.asm
test/TestProject/rom/: TestProject.gtr  TestProject.gtr.bak
test/TestProject/rom_parts/: TestProject.gtr.bank80  TestProject.gtr.bankFB  TestProject.gtr.bankFC  TestProject.gtr.bankFD  TestProject.gtr.bankFE  TestProject.gtr.bankFE.bak  TestProject.gtr.bankFF
(+75 files in other folders)
